<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/register_container"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layoutDirection="rtl"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back_one_register"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="13dp"
                android:src="@drawable/back_search"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp" />

            <TextView
                android:layout_marginRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:gravity="center"
                android:text="ثبت نام"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_marginTop="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center"
                android:src="@drawable/user_picture"
                android:id="@+id/select_img_user"
                android:layout_width="100dp"
                android:layout_height="100dp" />


            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/name"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/firstname"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/app_lan_persion"/>

            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/family"
                android:focusable="true"
                android:gravity="center"
                android:hint="@string/lastName"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/app_lan_persion"
                />

            <Button
                android:text="تأیید و ادامه"
                android:layout_marginTop="40dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:id="@+id/continue_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>


    </LinearLayout>